// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoritesList should match the snapshot if there are favorites to display 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FavoritesList
    favorites={
        Array [
            2,
          ]
    }
    movies={
        Array [
            Object {
              "movie_id": 2,
              "poster_path": "/qIODP7buZlHBbbs6PNlQxb4orHo.jpg",
              "release_date": "2005-08-28",
              "title": "Hotori - The Simple Wish for Joy",
              "vote_average": 10,
            },
            Object {
              "movie_id": 3,
              "poster_path": "/gimNITXaKUevTsbXNUFEI6bCqro.jpg",
              "release_date": "1982-04-30",
              "title": "Big Meat Eater",
              "vote_average": 10,
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(MovieCard)
          movie_id={2}
          poster_path="/qIODP7buZlHBbbs6PNlQxb4orHo.jpg"
          release_date="2005-08-28"
          starColor="#ffd24d"
          title="Hotori - The Simple Wish for Joy"
          vote_average={10}
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "class",
        "props": Object {
          "movie_id": 2,
          "poster_path": "/qIODP7buZlHBbbs6PNlQxb4orHo.jpg",
          "release_date": "2005-08-28",
          "starColor": "#ffd24d",
          "title": "Hotori - The Simple Wish for Joy",
          "vote_average": 10,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(MovieCard)
            movie_id={2}
            poster_path="/qIODP7buZlHBbbs6PNlQxb4orHo.jpg"
            release_date="2005-08-28"
            starColor="#ffd24d"
            title="Hotori - The Simple Wish for Joy"
            vote_average={10}
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "class",
          "props": Object {
            "movie_id": 2,
            "poster_path": "/qIODP7buZlHBbbs6PNlQxb4orHo.jpg",
            "release_date": "2005-08-28",
            "starColor": "#ffd24d",
            "title": "Hotori - The Simple Wish for Joy",
            "vote_average": 10,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`FavoritesList should match the snapshot if there are no favorites to display 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FavoritesList
    favorites={Array []}
    movies={
        Array [
            Object {
              "movie_id": 2,
              "poster_path": "/qIODP7buZlHBbbs6PNlQxb4orHo.jpg",
              "release_date": "2005-08-28",
              "title": "Hotori - The Simple Wish for Joy",
              "vote_average": 10,
            },
            Object {
              "movie_id": 3,
              "poster_path": "/gimNITXaKUevTsbXNUFEI6bCqro.jpg",
              "release_date": "1982-04-30",
              "title": "Big Meat Eater",
              "vote_average": 10,
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
    },
    "ref": null,
    "rendered": Array [],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
      },
      "ref": null,
      "rendered": Array [],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
